--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,27 +4,19 @@
 @import 'catalog';
 @import 'card';
 @import 'blog';
-
 @import 'sidebar';
 @import 'productsBlock';
-
 @import 'productsPage';
-
 @import 'buyers';
-
 @import 'aboutAndShipPaym';
-
 @import 'contacts';
-
 @import 'searchMenu';
 @import 'header';
 @import 'footer';
-
 @import 'sidebarWindow';
-
 @import 'checkout';
-
 @import 'basket';
+@import 'orderComplere';
 
 * {
     margin: 0;
