--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -12,6 +12,7 @@
 
     .slick-slider {
         overflow-x: clip;
+        padding: 0 5px;
         
         .slick-list {
             overflow: initial;
