--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,6 +1,6 @@
 .card {
     min-height: 385px;
-    margin: 0 10px 30px;
+    margin-bottom: 30px;
     display: flex !important;
     flex-direction: column;
     align-items: center;
@@ -36,7 +36,7 @@
 
         &::before {
             display: block;
-            width: 112%;
+            width: 108%;
             height: 145%;
             top: -10px;
         }
@@ -86,7 +86,8 @@
 
             .card-img {
                 cursor: pointer;
-                width: 82%;
+                max-width: 95%;
+                max-height: 85%;
                 transition: .25s opacity ease-in;
 
                 &.main-img {
@@ -166,7 +167,7 @@
             .product-mdf-item {
                 position: relative;
                 cursor: pointer;
-                margin-right: 10px;
+                margin-right: 9px;
                 margin-bottom: 5px;
                 border: 1px solid #666;
                 border-radius: 3px;
