--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -17,6 +17,7 @@
             text-decoration: none;
             letter-spacing: 2px;
             margin: 10px 0 15px;
+            text-align: center;
         }
 
         .contacts {
