--- a/src/styles/_searchMenu.scss
+++ b/src/styles/_searchMenu.scss
@@ -47,7 +47,7 @@
             margin: 3px 15px 3px 0;
             width: 100px;
             height: 100px;
-            object-fit: cover;
+            object-fit: contain;
         }
 
         .price-block {
