--- a/src/styles/_slider.scss
+++ b/src/styles/_slider.scss
@@ -13,15 +13,13 @@
             background-color: rgba(0, 0, 0, 0.25);
             height: 100%;
             position: relative;
+            display: flex;
+            align-items: center;
 
             .slider-info {
+                margin: 0 auto;
                 display: flex;
                 flex-direction: column;
-                width: 418px;
-                position: absolute;
-                top: 50%;
-                transform: translateY(-50%);
-                left: 100px;
 
                 .head-title {
                     color: #fff;
@@ -33,6 +31,7 @@
                 .title {
                     color: #fff;
                     line-height: 25px;
+                    max-width: 418px;
                 }
             }
         }
