create sortFIlters reducer & refactoring shop page

--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -207,6 +207,7 @@
                                     max-width: 100%;
                                     overflow: hidden;
                                     text-overflow: ellipsis;
+                                    white-space: nowrap;
                                     line-height: 20px;
                                 }
                             }
